testdata/baselines/reference/submodule/compiler/noImplicitAnyInBareInterface.errors.txt
noImplicitAnyInBareInterface.ts(3,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.


==== noImplicitAnyInBareInterface.ts (1 errors) ====
    interface Entry {
        // Should return error for implicit any on `new` and `foo`.
        new ();
        ~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
        few() : any;
        foo();
    }